--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-image: url('https://i.ibb.co/JrRtgjb/batu-karas-beach.jpg');
+    background-image: url('https://images.app.goo.gl/6fQqk6DyY3Dc37GE6');
     background-size: cover;
     background-position: center;
     color: #fff;
