--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Boldonse', sans-serif;
     background-image: url('https://images.app.goo.gl/6fQqk6DyY3Dc37GE6');
     background-size: cover;
     background-position: center;
